# msu_statistics_course

./: README.md  pyproject.toml  statistics_assignment.ipynb
