[tool.poetry]
name = "statistics"
version = "0.1.0"
description = ""
authors = ["Мущина Анастасия Сергеевна <mushchina.as19@physics.msu.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
